[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/LeagueGothic_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/assets/UI/MenuButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MenuButton" type="Button"]
margin_right = 1080.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
custom_styles/focus = SubResource( 1 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
textLabel = NodePath("Label")

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -720.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Label"]
[connection signal="button_down" from="." to="." method="_on_MenuButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_MenuButton_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_MenuButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MenuButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MenuButton_mouse_exited"]
